--- a/.travis.yml
+++ b/.travis.yml
@@ -5,37 +5,37 @@ install:
   - bundle install
 
 env:
-  - TTT_LANG="Arabic" TTT_COMMAND="rake spec:$TTT_LANG"
-  - TTT_LANG="Catalan" TTT_COMMAND="rake spec:$TTT_LANG"
-  - TTT_LANG="Chinese-Simplified" TTT_COMMAND="rake spec:$TTT_LANG"
-  - TTT_LANG="Chinese-Traditional" TTT_COMMAND="rake spec:$TTT_LANG"
-  - TTT_LANG="Czech" TTT_COMMAND="rake spec:$TTT_LANG"
-  - TTT_LANG="Danish" TTT_COMMAND="rake spec:$TTT_LANG"
-  - TTT_LANG="Dutch" TTT_COMMAND="rake spec:$TTT_LANG"
-  - TTT_LANG="English" TTT_COMMAND="rake spec:$TTT_LANG"
-  - TTT_LANG="French" TTT_COMMAND="rake spec:$TTT_LANG"
-  - TTT_LANG="German" TTT_COMMAND="rake spec:$TTT_LANG"
-  - TTT_LANG="Greek" TTT_COMMAND="rake spec:$TTT_LANG"
-  - TTT_LANG="Hebrew" TTT_COMMAND="rake spec:$TTT_LANG"
-  - TTT_LANG="Hungarian" TTT_COMMAND="rake spec:$TTT_LANG"
-  - TTT_LANG="Indonesian" TTT_COMMAND="rake spec:$TTT_LANG"
-  - TTT_LANG="Italian" TTT_COMMAND="rake spec:$TTT_LANG"
-  - TTT_LANG="Japanese" TTT_COMMAND="rake spec:$TTT_LANG"
-  - TTT_LANG="Korean" TTT_COMMAND="rake spec:$TTT_LANG"
-  - TTT_LANG="Malay" TTT_COMMAND="rake spec:$TTT_LANG"
-  - TTT_LANG="Norwegian-Bokmal" TTT_COMMAND="rake spec:$TTT_LANG"
-  - TTT_LANG="Norwegian-Nynorsk" TTT_COMMAND="rake spec:$TTT_LANG"
-  - TTT_LANG="Polish" TTT_COMMAND="rake spec:$TTT_LANG"
-  - TTT_LANG="Portuguese" TTT_COMMAND="rake spec:$TTT_LANG"
-  - TTT_LANG="Portuguese-Brazil" TTT_COMMAND="rake spec:$TTT_LANG"
-  - TTT_LANG="Romanian" TTT_COMMAND="rake spec:$TTT_LANG"
-  - TTT_LANG="Russian" TTT_COMMAND="rake spec:$TTT_LANG"
-  - TTT_LANG="Spanish" TTT_COMMAND="rake spec:$TTT_LANG"
-  - TTT_LANG="Swedish" TTT_COMMAND="rake spec:$TTT_LANG"
-  - TTT_LANG="Thai" TTT_COMMAND="rake spec:$TTT_LANG"
-  - TTT_LANG="Turkish" TTT_COMMAND="rake spec:$TTT_LANG"
-  - TTT_LANG="Ukrainian" TTT_COMMAND="rake spec:$TTT_LANG"
-  - TTT_LANG="Vietnamese" TTT_COMMAND="rake spec:$TTT_LANG"
+  - TTT_LANG="Arabic"
+  - TTT_LANG="Catalan"
+  - TTT_LANG="Chinese-Simplified"
+  - TTT_LANG="Chinese-Traditional"
+  - TTT_LANG="Czech"
+  - TTT_LANG="Danish"
+  - TTT_LANG="Dutch"
+  - TTT_LANG="English"
+  - TTT_LANG="French"
+  - TTT_LANG="German"
+  - TTT_LANG="Greek"
+  - TTT_LANG="Hebrew"
+  - TTT_LANG="Hungarian"
+  - TTT_LANG="Indonesian"
+  - TTT_LANG="Italian"
+  - TTT_LANG="Japanese"
+  - TTT_LANG="Korean"
+  - TTT_LANG="Malay"
+  - TTT_LANG="Norwegian-Bokmal"
+  - TTT_LANG="Norwegian-Nynorsk"
+  - TTT_LANG="Polish"
+  - TTT_LANG="Portuguese"
+  - TTT_LANG="Portuguese-Brazil"
+  - TTT_LANG="Romanian"
+  - TTT_LANG="Russian"
+  - TTT_LANG="Spanish"
+  - TTT_LANG="Swedish"
+  - TTT_LANG="Thai"
+  - TTT_LANG="Turkish"
+  - TTT_LANG="Ukrainian"
+  - TTT_LANG="Vietnamese"
   - TTT_COMMAND="rake integration:cocoapods_ios"
   - TTT_COMMAND="rake integration:cocoapods_ios_static"
   - TTT_COMMAND="rake integration:cocoapods_osx"
@@ -45,7 +45,7 @@ env:
   - TTT_COMMAND="pod lib lint --use-libraries"
 
 script:
-  - bundle exec $TTT_COMMAND
+  - test -n "$TTT_LANG" && rake spec:$TTT_LANG || bundle exec $TTT_COMMAND
 
 after_success:
-  - test -n "$TTT_LANG" && bundle exec slather coverage --scheme="$TTT_LANG" --coveralls
+  - test -n "$TTT_LANG" && bundle exec slather coverage --scheme="$TTT_LANG" --build-directory="build/DerivedData/#{lang}" --coveralls
